<resources>
	<string name="app_name">Spellbook 3.5</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="spell_source">Source book</string>
	<string name="levels">Levels</string>
	<string name="spell_school">School</string>
	<string name="spell_descriptors">Descriptors</string>
	<string name="spell_components">Components</string>
	<string name="spell_cast_time">Cast time</string>
	<string name="spell_range">Range</string>
	<string name="spell_effect">Effect</string>
	<string name="spell_duration">Duration</string>
	<string name="spell_saving_throw">Saving throw</string>
	<string name="spell_resistance">Resistance</string>
	<string name="search_spells">Search spells</string>
	<string name="scrolls">Scrolls</string>
	<string name="slots">Slots</string>
	<string name="known">Known</string>
	<string name="rename_character">Rename character</string>
	<string name="delete_character">Delete character</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="rename">Rename</string>
	<string name="delete">Delete</string>
	<string name="are_you_sure">Are you sure?</string>
	<string name="initialize_database">Initialize database</string>
	<string name="export_characters">Export characters</string>
	<string name="import_characters">Import characters</string>
	<string name="delete_database">Delete database</string>
	<string name="create_character">Create character</string>
	<string name="search_spell">Search spell</string>
	<string name="add_slots">Add slots</string>
	<string name="add_scrolls">Add scrolls</string>
	<string name="learn_spells">Learn spells</string>
	<string name="arcane">Arcane</string>
	<string name="divine">Divine</string>
	<string name="set_caster_level">Set caster level</string>
	<string name="expended">Expended</string>
	<string name="special_slot">Special slot</string>
	<string name="clear">Clear</string>
	<string name="recover_all">Recover all</string>
	<string name="level_0">Level 0</string>
	<string name="level_1">Level 1</string>
	<string name="level_2">Level 2</string>
	<string name="level_3">Level 3</string>
	<string name="level_4">Level 4</string>
	<string name="level_5">Level 5</string>
	<string name="level_6">Level 6</string>
	<string name="level_7">Level 7</string>
	<string name="level_8">Level 8</string>
	<string name="level_9">Level 9</string>
	<string name="choose_type">Choose type</string>
	<string name="set_study_time">Set study time</string>
	<string name="set_copy_time">Set copy time</string>
	<string name="classes">Classes</string>
	<string name="domains">Domains</string>
	<string name="feats">Feats</string>
	<string name="select_source">Select source</string>
	<string name="use_scroll">Use scroll</string>
	<string name="database_download_started">Database download started</string>
	<string name="database_download_error_1">A database file already exists, you should not have been able to start this operation</string>
	<string name="database_download_error_2">An internet connection is required to download an initial database</string>
	<string name="database_download_error_3">A database download was already started</string>
	<string name="character_export_succeeded">Characters exported to file %1$s</string>
	<string name="character_export_failed_1">Characters export failed: database unavailable</string>
	<string name="character_export_failed_2">Characters export failed: could not write file %1$s</string>
	<string name="character_import_succeeded">Characters imported successfully</string>
	<string name="character_import_failed_1">Characters import failed: database unavailable</string>
	<string name="character_import_failed_2">Characters import failed: could not read file %1$s</string>
	<string name="select_file">Select file</string>
	<string name="character_import_not_yaml">Selected file not recognized as database export file</string>
	<string name="unlearn">Unlearn</string>
	<string name="title_activity_main">MainActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="characters">Characters</string>
	<string name="spell_browser">Spell browser</string>
	<string name="settings">Settings</string>
	<string name="toggle_summary">Toggle summary</string>
	<string name="warning_import">This will overwrite existing data, are you sure?</string>
	<string name="warning_nuke">This will permanently delete the database, are you sure?</string>
</resources>
